# LaboratorioProgrammazioneUniFi

./: CMakeLists.txt  Cart.cpp  Cart.h  List.cpp  List.h  ListManager.cpp  ListManager.h  Product.cpp  Product.h  ProductList.cpp  ProductList.h  main.cpp
test/: CMakeLists.txt  TestListe.cpp  TestProdotti.cpp
